--- a/templates/solace-aws.nodes.template
+++ b/templates/solace-aws.nodes.template
@@ -375,7 +375,7 @@
                             {
                                 "Ref": "QSS3KeyPrefix"
                             },
-                            "templates/nodegroup.template"
+                            "templates/nodecreate.template"
                         ]
                     ]
                 },
@@ -454,7 +454,7 @@
                             {
                                 "Ref": "QSS3KeyPrefix"
                             },
-                            "templates/nodegroup.template"
+                            "templates/nodecreate.template"
                         ]
                     ]
                 },
@@ -533,7 +533,7 @@
                             {
                                 "Ref": "QSS3KeyPrefix"
                             },
-                            "templates/nodegroup.template"
+                            "templates/nodecreate.template"
                         ]
                     ]
                 },
