--- a/scripts/ansible/group_vars/LOCALHOST/localhost.yml
+++ b/scripts/ansible/group_vars/LOCALHOST/localhost.yml
@@ -2,7 +2,7 @@
 ANSIBLE_USERNAME:  admin
 ANSIBLE_PASSWORD:  admin
 ANSIBLE_VMR_SEMP_PORT: 8080
-ANSIBLE_APL_SEMP_PORT: 80
+ANSIBLE_VMR_IP: 127.0.0.1
 LOCAL_INFO:
    NAME: SOLACE_LOCAL_NAME
    ROLE: SOLACE_LOCAL_ROLE
