--- a/scripts/ansible/ConfigRedundancyGroupSEMPv1.yml
+++ b/scripts/ansible/ConfigRedundancyGroupSEMPv1.yml
@@ -17,5 +17,168 @@
 #node-type monitor-node
 #exit
 #password passwd
-#exit
-#no shut
+
+- hosts: LOCALHOST
+  tasks:
+
+    -name: Redundancy switchover mechanism
+     uri:
+         url:              "http://{{ ANSIBLE_VMR_IP }}:{{ ANSIBLE_VMR_SEMP_PORT }}/SEMP"
+         method:           GET
+         user:             "{{ ANSIBLE_USERNAME }}"
+         password:         "{{ ANSIBLE_PASSWORD }}"
+         body:             "<rpc semp-version='soltr/8_2'>\
+                           <redundancy><switchover-mechanism><hostlist/></switchover-mechanism></redundancy></rpc>"
+         force_basic_auth: yes
+         status_code:      200
+         body_format:      raw
+         return_content:   yes
+      register: rpc_reply
+      ignore_errors: True
+      until: rpc_reply|success
+      retries: 60
+      delay: 10
+
+    -name: Redundancy group Primary node create
+     uri:
+         url:              "http://{{ ANSIBLE_VMR_IP }}:{{ ANSIBLE_VMR_SEMP_PORT }}/SEMP"
+         method:           GET
+         user:             "{{ ANSIBLE_USERNAME }}"
+         password:         "{{ ANSIBLE_PASSWORD }}"
+         body:             "<rpc semp-version='soltr/8_2'>\
+                           <redundancy><group><create><node>\
+                           <node-name>{{ PRIMARY_ROUTER.NAME }}</node-name>\
+                           </node></create></group></redundancy></rpc>"
+         force_basic_auth: yes
+         status_code:      200
+         body_format:      raw
+         return_content:   yes
+      register: rpc_reply
+      ignore_errors: True
+      until: rpc_reply|success
+      retries: 60
+      delay: 10
+
+    -name: Redundancy group Primary node configure
+     uri:
+         url:              "http://{{ ANSIBLE_VMR_IP }}:{{ ANSIBLE_VMR_SEMP_PORT }}/SEMP"
+         method:           GET
+         user:             "{{ ANSIBLE_USERNAME }}"
+         password:         "{{ ANSIBLE_PASSWORD }}"
+         body:             "<rpc semp-version='soltr/8_2'>\
+                           <redundancy><group><node>\
+                           <node-name>{{ PRIMARY_ROUTER.NAME }}</node-name>\
+                           <ip>{{ PRIMARY_ROUTER.IP }}</ip>\
+                           <node-type>message-routing-node</node-type>\
+                           </node></group></redundancy></rpc>"
+         force_basic_auth: yes
+         status_code:      200
+         body_format:      raw
+         return_content:   yes
+      register: rpc_reply
+      ignore_errors: True
+      until: rpc_reply|success
+      retries: 60
+      delay: 10
+
+    -name: Redundancy group Backup node create
+     uri:
+         url:              "http://{{ ANSIBLE_VMR_IP }}:{{ ANSIBLE_VMR_SEMP_PORT }}/SEMP"
+         method:           GET
+         user:             "{{ ANSIBLE_USERNAME }}"
+         password:         "{{ ANSIBLE_PASSWORD }}"
+         body:             "<rpc semp-version='soltr/8_2'>\
+                           <redundancy><group><create><node>\
+                           <node-name>{{ BACKUP_ROUTER.NAME }}</node-name>\
+                           </node></create></group></redundancy></rpc>"
+         force_basic_auth: yes
+         status_code:      200
+         body_format:      raw
+         return_content:   yes
+      register: rpc_reply
+      ignore_errors: True
+      until: rpc_reply|success
+      retries: 60
+      delay: 10
+
+    -name: Redundancy group Backup node
+     uri:
+         url:              "http://{{ ANSIBLE_VMR_IP }}:{{ ANSIBLE_VMR_SEMP_PORT }}/SEMP"
+         method:           GET
+         user:             "{{ ANSIBLE_USERNAME }}"
+         password:         "{{ ANSIBLE_PASSWORD }}"
+         body:             "<rpc semp-version='soltr/8_2'>\
+                           <redundancy><group><node>\
+                           <node-name>{{ BACKUP_ROUTER.NAME }}</node-name>\
+                           <ip>{{ BACKUP_ROUTER.IP }}</ip>\
+                           <node-type>message-routing-node</node-type>\
+                           </node></group></redundancy></rpc>"
+         force_basic_auth: yes
+         status_code:      200
+         body_format:      raw
+         return_content:   yes
+      register: rpc_reply
+      ignore_errors: True
+      until: rpc_reply|success
+      retries: 60
+      delay: 10
+
+    -name: Redundancy group Monitor node create
+     uri:
+         url:              "http://{{ ANSIBLE_VMR_IP }}:{{ ANSIBLE_VMR_SEMP_PORT }}/SEMP"
+         method:           GET
+         user:             "{{ ANSIBLE_USERNAME }}"
+         password:         "{{ ANSIBLE_PASSWORD }}"
+         body:             "<rpc semp-version='soltr/8_2'>\
+                           <redundancy><group><create><node>\
+                           <node-name>{{ MONITOR.NAME }}</node-name>\
+                           </node></create></group></redundancy></rpc>"
+         force_basic_auth: yes
+         status_code:      200
+         body_format:      raw
+         return_content:   yes
+      register: rpc_reply
+      ignore_errors: True
+      until: rpc_reply|success
+      retries: 60
+      delay: 10
+
+    -name: Redundancy group Monitor node
+     uri:
+         url:              "http://{{ ANSIBLE_VMR_IP }}:{{ ANSIBLE_VMR_SEMP_PORT }}/SEMP"
+         method:           GET
+         user:             "{{ ANSIBLE_USERNAME }}"
+         password:         "{{ ANSIBLE_PASSWORD }}"
+         body:             "<rpc semp-version='soltr/8_2'>\
+                           <redundancy><group><node>\
+                           <node-name>{{ MONITOR.NAME }}</node-name>\
+                           <ip>{{ MONITOR.IP }}</ip>\
+                           <node-type>monitor-node</node-type>\
+                           </node></group></redundancy></rpc>"
+         force_basic_auth: yes
+         status_code:      200
+         body_format:      raw
+         return_content:   yes
+      register: rpc_reply
+      ignore_errors: True
+      until: rpc_reply|success
+      retries: 60
+      delay: 10
+
+    -name: Redundancy group password
+     uri:
+         url:              "http://{{ ANSIBLE_VMR_IP }}:{{ ANSIBLE_VMR_SEMP_PORT }}/SEMP"
+         method:           GET
+         user:             "{{ ANSIBLE_USERNAME }}"
+         password:         "{{ ANSIBLE_PASSWORD }}"
+         body:             "<rpc semp-version='soltr/8_2'>\
+                           <redundancy><group><password>password</password></group></redundancy></rpc>"
+         force_basic_auth: yes
+         status_code:      200
+         body_format:      raw
+         return_content:   yes
+      register: rpc_reply
+      ignore_errors: True
+      until: rpc_reply|success
+      retries: 60
+      delay: 10
