--- a/scripts/ansible/ConfigReloadToMonitorSEMPv1.yml
+++ b/scripts/ansible/ConfigReloadToMonitorSEMPv1.yml
@@ -1,2 +1,20 @@
 --
 #reload default-config monitoring-node
+- hosts: LOCALHOST
+  tasks:
+    -name: Reboot VMR to Monitor node mode 
+     uri:
+         url:              "http://{{ ANSIBLE_VMR_IP }}:{{ ANSIBLE_VMR_SEMP_PORT }}/SEMP"
+         method:           GET
+         user:             "{{ ANSIBLE_USERNAME }}"
+         password:         "{{ ANSIBLE_PASSWORD }}"
+         body:             "<rpc semp-version='soltr/8_2'><reload><default-config/><monitoring-node/></reload></rpc>"
+         force_basic_auth: yes
+         status_code:      200
+         body_format:      raw
+         return_content:   yes
+      register: rpc_reply
+      ignore_errors: True
+      until: rpc_reply|success
+      retries: 60
+      delay: 10
