--- a/scripts/ansible/ConfigShutMessageSpoolSEMPv1.yml
+++ b/scripts/ansible/ConfigShutMessageSpoolSEMPv1.yml
@@ -1,2 +1,21 @@
 --
 #hardware message-spool shutdown
+- hosts: LOCALHOST
+  tasks:
+    -name: Shut Message-spool
+     uri:
+         url:              "http://{{ ANSIBLE_VMR_IP }}:{{ ANSIBLE_VMR_SEMP_PORT }}/SEMP"
+         method:           GET
+         user:             "{{ ANSIBLE_USERNAME }}"
+         password:         "{{ ANSIBLE_PASSWORD }}"
+         body:             "<rpc semp-version='soltr/8_2'>\
+                           <hardware><message-spool><shutdown><undefined/></shutdown></message-spool></hardware></rpc>"
+         force_basic_auth: yes
+         status_code:      200
+         body_format:      raw
+         return_content:   yes
+      register: rpc_reply
+      ignore_errors: True
+      until: rpc_reply|success
+      retries: 60
+      delay: 10
