--- a/templates/solace-aws.template
+++ b/templates/solace-aws.template
@@ -9,7 +9,8 @@
                         "default": "Solace Docker URL"
                     },
                     "Parameters": [
-                        "SolaceDockerURL"
+                        "SolaceDockerURL",
+                        "AdminPassword"
                     ]
                 },                
                 {
@@ -66,6 +67,9 @@
             "ParameterLabels": {
                 "SolaceDockerURL": {
                     "default": "Solace Docker URL"
+                },
+                "AdminPassword": {
+                    "default": "Password to access SolOS admin console and SEMP",
                 },                
                 "BootDiskSize": {
                     "default": "Boot Disk Capacity (GiB)"
@@ -124,6 +128,10 @@
     "Parameters": {
         "SolaceDockerURL": {
             "Description": "Require URL to enterprise or Evaluation VMR, not Community",
+            "Type": "String"
+        },
+        "AdminPassword": {
+            "Description": "Require password to access SolOS admin console and SEMP",
             "Type": "String"
         },
         "BootDiskSize": {
@@ -383,6 +391,9 @@
                     "SolaceDockerURL": {
                         "Ref": "SolaceDockerURL"
                     },
+                    "AdminPassword": {
+                        "Ref": "AdminPassword"
+                    },
                     "BootDiskSize": {
                         "Ref": "BootDiskSize"
                     },
@@ -462,6 +473,9 @@
                     "SolaceDockerURL": {
                         "Ref": "SolaceDockerURL"
                     },
+                    "AdminPassword": {
+                        "Ref": "AdminPassword"
+                    },
                     "BootDiskSize": {
                         "Ref": "BootDiskSize"
                     },
@@ -540,6 +554,9 @@
                 "Parameters": {
                     "SolaceDockerURL": {
                         "Ref": "SolaceDockerURL"
+                    },
+                    "AdminPassword": {
+                        "Ref": "AdminPassword"
                     },
                     "BootDiskSize": {
                         "Ref": "BootDiskSize"
